fix compile warnings